--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,6 @@
       document.getElementById('loading').style.display = 'none';
     };
   </script>
-  <script src="pong.js"></script>
+  <script src="static/pong.js"></script>
 </body>
 </html>
